--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
+body {
+    background: #CCCCCC
+}
+
 p {
-  text-align: center;
-  background: #CCCCCC
+    text-align: center;
+}
+
+em strong {
+    color: #FF0000;
 }
